--- a/styles/media.css
+++ b/styles/media.css
@@ -1,24 +1,55 @@
-@media screen and (max-width: 760px){
-    header{
+@media screen and (max-width: 760px) {
+    header {
         flex-direction: column;
-    }
-    main{
-        flex-direction: column;
-    }
-    h2{
-        font-size: 38px;
-    }
-    form{
-        margin: 0 auto;
-    }
-    input{
-        align-self: certer;
+        text-align: center;
     }
 
-    img{
+    #title {
+        margin-bottom: 20px;
+    }
+
+    main {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    h2 {
+        font-size: 38px;
+        line-height: 1.2;
+    }
+
+    form {
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    input {
+        align-self: center;
+        width: 100%;
+        margin-top: 15px;
+    }
+
+    img {
         display: none;
     }
-    ul{
+
+    ul {
         text-align: center;
+        padding: 0;
+    }
+
+    li {
+        display: block;
+        margin: 10px 0;
+    }
+
+    #inscrito-btn {
+        margin-top: 10px;
+        border: none; 
+    }
+
+    #inscrito-btn li:hover {
+        color: black; 
     }
 }
