--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: rgb(34, 34, 34);
     color: white;
@@ -6,11 +5,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 10px;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
 }
-
 
 header {
     display: flex;
@@ -39,12 +34,10 @@ h1 {
     font-weight: 200;
 }
 
-
 main {
     display: flex;
     flex-direction: row;
     margin-top: 50px;
-    flex: 1; 
 }
 
 h2 {
@@ -64,11 +57,12 @@ img {
     border-radius: 5%;
 }
 
-
+/* Efeito hover aplicado apenas ao texto (<li>) */
 li:hover {
     color: black;
     transition: 0.3s all;
 }
+
 
 #inscrito-btn {
     border: 2px solid white;
@@ -76,9 +70,11 @@ li:hover {
     border-radius: 15px;
 }
 
+
 #inscrito-btn:hover {
     background-color: transparent; 
 }
+
 
 #inscrito-btn li:hover {
     color: black; 
@@ -111,6 +107,7 @@ input {
     font-size: 15px;
 }
 
+
 article img {
     transition: box-shadow 0.3s ease;
 }
@@ -118,4 +115,3 @@ article img {
 article img:hover {
     box-shadow: 0 0 20px rgba(255, 223, 0, 0.8);
 }
-
