--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgb(34, 34, 34);
     color: white;
@@ -36,8 +37,14 @@ h1 {
 
 main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column; 
     margin-top: 50px;
+}
+
+.content-wrapper {
+    display: flex; 
+    justify-content: space-between;
+    width: 100%;
 }
 
 h2 {
@@ -57,12 +64,11 @@ img {
     border-radius: 5%;
 }
 
-/* Efeito hover aplicado apenas ao texto (<li>) */
+
 li:hover {
     color: black;
     transition: 0.3s all;
 }
-
 
 #inscrito-btn {
     border: 2px solid white;
@@ -70,11 +76,9 @@ li:hover {
     border-radius: 15px;
 }
 
-
 #inscrito-btn:hover {
     background-color: transparent; 
 }
-
 
 #inscrito-btn li:hover {
     color: black; 
@@ -107,11 +111,69 @@ input {
     font-size: 15px;
 }
 
-
 article img {
     transition: box-shadow 0.3s ease;
 }
 
 article img:hover {
     box-shadow: 0 0 20px rgba(255, 223, 0, 0.8);
+}
+
+
+.preview-section {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.preview-text {
+    flex: 1;
+    margin-left: 20px; 
+    text-align: right; 
+}
+
+.preview-text p {
+    font-size: 18px;
+    color: yellow;
+}
+
+.preview-image {
+    flex: 1;
+}
+
+.rounded-image {
+    width: 100%;
+    border-radius: 20px; 
+}
+
+h2 {
+    transition: text-shadow 0.3s ease; 
+}
+
+h2:hover {
+    text-shadow: 0 0 10px rgba(255, 223, 0, 0.8); 
+}
+
+.preview-text .social-icons {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 20px; 
+    margin-top: 10px; 
+    width: 100%; 
+    padding: 10px 0; 
+}
+
+
+.preview-text .social-icons a {
+    color: #fff; 
+    text-decoration: none; 
+    font-size: 24px; 
+    transition: color 0.3s ease; 
+}
+
+
+.preview-text .social-icons a:hover {
+    color: #232323; 
 }
