--- a/styles/style.css
+++ b/styles/style.css
@@ -1,179 +1,176 @@
-
 body {
-    background-color: rgb(34, 34, 34);
-    color: white;
-    font-family: poppinsregular;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px;
+  background-color: rgb(34, 34, 34);
+  color: white;
+  font-family: poppinsregular;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #title {
-    flex-direction: column;
-    line-height: 10px;
-    color: yellow;
+  flex-direction: column;
+  line-height: 10px;
+  color: yellow;
 }
 
 li {
-    display: inline-block;
-    margin: 20px;
-    color: yellow;
+  display: inline-block;
+  margin: 20px;
+  color: yellow;
 }
 
 span {
-    color: yellow;
+  color: yellow;
 }
 
 h1 {
-    font-weight: 200;
+  font-weight: 200;
 }
 
 main {
-    display: flex;
-    flex-direction: column; 
-    margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
 }
 
 .content-wrapper {
-    display: flex; 
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 h2 {
-    font-size: 56px;
-    line-height: 4rem;
-    font-family: poppinsmedium;
+  font-size: 56px;
+  line-height: 4rem;
+  font-family: poppinsmedium;
 }
 
 p {
-    line-height: 1.5rem;
-    max-width: 500px;
-    font-family: poppinslight;
+  line-height: 1.5rem;
+  max-width: 500px;
+  font-family: poppinslight;
 }
 
 img {
-    width: 580px;
-    border-radius: 5%;
+  width: 580px;
+  border-radius: 5%;
 }
 
-
 li:hover {
-    color: black;
-    transition: 0.3s all;
+  color: black;
+  transition: 0.3s all;
 }
 
 #inscrito-btn {
-    border: 2px solid white;
-    padding: 10px;
-    border-radius: 15px;
+  border: 2px solid white;
+  padding: 10px;
+  border-radius: 15px;
 }
 
 #inscrito-btn:hover {
-    background-color: transparent; 
+  background-color: transparent;
 }
 
 #inscrito-btn li:hover {
-    color: black; 
+  color: black;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
+  display: flex;
+  flex-direction: column;
+  width: 70%;
 }
 
 form [type="submit"] {
-    height: 50px;
-    width: 200px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
+  height: 50px;
+  width: 200px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
 }
 
 form [type="submit"]:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 input {
-    margin-top: 20px;
-    height: 20px;
-    padding: 15px;
-    border-radius: 20px;
-    border: none;
-    font-size: 15px;
+  margin-top: 20px;
+  height: 20px;
+  padding: 15px;
+  border-radius: 20px;
+  border: none;
+  font-size: 15px;
 }
-
+/*Efeitos de glow na imagem */
 article img {
-    transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease;
 }
 
 article img:hover {
-    box-shadow: 0 0 20px rgba(255, 223, 0, 0.8);
+  box-shadow: 0 0 20px rgba(255, 223, 0, 0.8);
 }
-
-
+/* Section da 2° parte*/
 .preview-section {
-    display: flex;
-    align-items: center;
-    margin-top: 50px;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .preview-text {
-    flex: 1;
-    margin-left: 20px; 
-    text-align: right; 
+  flex: 1;
+  margin-left: 20px;
+  text-align: center;
 }
 
 .preview-text p {
-    font-size: 18px;
-    color: yellow;
+  font-size: 18px;
+  color: yellow;
 }
 
 .preview-image {
-    flex: 1;
+  flex: 1;
 }
 
 .rounded-image {
-    width: 100%;
-    border-radius: 20px; 
+  width: 100%;
+  border-radius: 20px;
 }
-
+/*Efeitos de Glow no H2*/
 h2 {
-    transition: text-shadow 0.3s ease; 
+  transition: text-shadow 0.3s ease;
 }
 
 h2:hover {
-    text-shadow: 0 0 10px rgba(255, 223, 0, 0.8); 
+  text-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
 }
-
+/* Sections dos icons */
 .preview-text .social-icons {
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    gap: 20px; 
-    margin-top: 10px; 
-    width: 100%; 
-    padding: 10px 0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px 0;
+  margin-left: 7vh;
 }
-
 
 .preview-text .social-icons a {
-    color: #fff; 
-    text-decoration: none; 
-    font-size: 24px; 
-    transition: color 0.3s ease; 
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+  transition: color 0.3s ease;
 }
 
-
 .preview-text .social-icons a:hover {
-    color: #232323; 
+  color: #232323;
 }
